Update image with version 20211216_125

--- a/pch-client-chart/values.yaml
+++ b/pch-client-chart/values.yaml
@@ -52,14 +52,14 @@ services:
   frontend:
     image: 
       repository: andreask81/frontend
-      frontend_tag: "latest"
+      frontend_tag: "20211216_125"
     replicas: 1
     ports:
       - 80
   parser:
     image: 
       repository: andreask81/parser
-      parser_tag: "latest"
+      parser_tag: "20211216_125"
     replicas: 1
 
 # postgresql-ha
