--- a/pch-client-chart/values.yaml
+++ b/pch-client-chart/values.yaml
@@ -7,16 +7,9 @@ pvc:
 # ingress
 ingress:
   enabled: true
-  # Used to create an Ingress record.
-  host: pchdemo.local
+  host: pchclient.local
   tlsEnabled: false
   annotations:
-    kubernetes.io/ingress.class: nginx
-  graphql:
-    annotations:
-      nginx.ingress.kubernetes.io/rewrite-target: /v1/graphql
-  frontend:
-    annotations:
 
 # database
 dbHost: postgres
